--- a/CommentPlugin/Info.plist
+++ b/CommentPlugin/Info.plist
@@ -38,6 +38,14 @@
 				</dict>
 				<dict>
 					<key>XCSourceEditorCommandClassName</key>
+					<string>$(PRODUCT_MODULE_NAME).extCommentLinesCommand</string>
+					<key>XCSourceEditorCommandIdentifier</key>
+					<string>$(PRODUCT_BUNDLE_IDENTIFIER).extCommentLinesCommand</string>
+					<key>XCSourceEditorCommandName</key>
+					<string>extCommentLines</string>
+				</dict>
+				<dict>
+					<key>XCSourceEditorCommandClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).extDocumentCommand</string>
 					<key>XCSourceEditorCommandIdentifier</key>
 					<string>$(PRODUCT_BUNDLE_IDENTIFIER). extDocumentCommand</string>
